tests/expectations/parser/functions/ident_token_fail.out
Error [EPAR0370005]: expected '@', 'struct', 'final', 'const', 'fn', 'program', 'script' -- found '1'
    --> test:3:1
     |
   3 | 1 main() {}
     | ^
